# AstralEngine2D

./: .gitignore  ASTRAL_ENGINE_TECHNICAL_REPORT.md  CMakeLists.txt  LICENSE  README.md  common.h  create_test_texture.py
.kiro/: EDITOR_UI_UX_IMPROVEMENTS.md
assets/levels/: pong_level.json
assets/shaders/: basic_3d.frag.dxil  basic_3d.frag.glsl  basic_3d.frag.glsl.spv  basic_3d.frag.hlsl  basic_3d.frag.spv  basic_3d.vert.dxil  basic_3d.vert.glsl  basic_3d.vert.glsl.spv  basic_3d.vert.hlsl  basic_3d.vert.spv  compile.bat  compile_spirv.bat  pbr.frag.glsl  pbr.frag.glsl.spv  pbr.vert.glsl  pbr.vert.glsl.spv
benchmarks/: engine_benchmarks.cpp
docs/: OVERVIEW.md  architecture.md  code_review.md  core_app.md  ecs_components.md  ecs_entity.md  editor_design.md  entity_manager.md  getting_started.md  graphics_pipeline.md  main.md  material_texture_system.md  math_vec2.md  sdl3_gpu_api.md  sdl_gpu_architecture.md  sdl_gpu_rendering_architecture.md  sdl_gpu_usage_example.md
engine/core/: app.cpp  app.h  asset_interfaces.h  asset_manager.h  asset_registry.h  entity_manager.cpp  entity_manager.h  error_handling.cpp  error_handling.h  font_manager.h  gltf_loader.cpp  gltf_loader.h  gpu_resource.h  level_loader.h  material_manager.h  mesh_manager.h  pipeline_manager.h  sampler_manager.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  shader_loader.h  shader_manager.h  sound_manager.h  system_manager.cpp  system_manager.h  texture_manager.h
engine/ecs/: components.h  entity.h  trait.h
engine/editor/: editor_manager.cpp  editor_manager.h
engine/editor/panels/: console_panel.cpp  console_panel.h  content_browser_panel.cpp  content_browser_panel.h  editor_panel.h  properties_panel.cpp  properties_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  viewport_panel.cpp  viewport_panel.h
engine/math/: vec2.h  vertex.h
engine/renderer/: graphics_device.h  renderer.h  sdl3_graphics_device.cpp  sdl3_graphics_device.h  sdl3_renderer.cpp  sdl3_renderer.h
engine/systems/: camera_system.h  input_system.h  lifespan_system.h  movement_system.h  physics_system.h  render_system.cpp  render_system.h  system.h  text_system.h  trait_system.cpp  trait_system.h  transform_system.h
games/pong/: main.cpp  menu_scene.cpp  menu_scene.h  pong_game.cpp  pong_game.h
games/sandbox/: main.cpp  sandbox_scene.cpp  sandbox_scene.h
src/: CMakeLists.txt  common.h  main.cpp
src/core/: app.cpp  app.h  entity_manager.cpp  entity_manager.h
src/ecs/: components.h  entity.h
tests/: entity_tests.cpp  test_framework.h
